# dotfiles

./: .Xdefaults  .bashrc  .clang-format  .ctagsrc  .dircolors  .gitconfig  .gitignore  .gitignore_glob  .gitmodules  .glob_git_ignore  .i3status.conf  .inputrc  .pylintrc  .shrc  .style.yapf  .tmux.conf  .vimrc  .xbindkeysrc.disabled  .zprofile  .zshrc  aurlst  brewlist  brewlst  cmake-format.py  link.sh  paclst  piplst  pkglst  settings.json
.claude/: CLAUDE.md  settings.json  statusline.sh
.claude/commands/: CLAUDE.md  api-review.md  backport-release.md  commit.md  debrief.md  jenkins.md  merge-app4triqs.md  optimize.md  profile.md  refine-command.md  refine-command.md.bkp  simpl.md  simplify.md  tidy-commits.md
.claude/hooks/: tmux-status.sh
.codex/: config.toml
.codex/hooks/: tmux-status.sh
.config/nvim/: init.vim
.config/nvim.old/: init.vim
.git_template/hooks/: clang-format  ctags  pre-commit
.i3/: config
.jupyter/: jupyter_nbconvert_config.json  migrated
.jupyter/custom/: custom.js
.jupyter/nbconfig/: notebook.json
.latex/: refs.bib
.latex/Empty/: main.tex  makefile  mybibstyle.bst  refs.bib
.latex/Empty/content/: Input.tex
.latex/Empty/settings/: header.tex  tableofcontents.tex  titlepage.tex
.vim/: .netrwhist  mymake.sh  settings.json
.vim/after/ftplugin/: c.vim  tex.vim
.vim/dict/: c.dict
.vim/plugin/: mako.vim
.vim/spell/: de.utf-8.add  de.utf-8.add.spl  en.utf-8.add  en.utf-8.add.spl
.vim/templates/: CMakeLists.txt  bench.cpp  class.cpp  main.cpp  templ.cpp  templ.h  templ.tex  test.cpp  test_F.cpp
(+2 files in other folders)
